--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.0",
     "@tailwindcss/vite": "^4.1.3",
+    "@tanstack/query-sync-storage-persister": "^5.74.6",
+    "@tanstack/react-query": "^5.74.4",
+    "@tanstack/react-query-persist-client": "^5.74.6",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.6.0",
+    "json-server": "0.17.4",
     "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
