feat(jornada): add jornada page with chat, loading, and content components
Introduce a new page for managing journeys, including a chat interface, loading skeleton, and content display. The chat component allows users to ask questions about the journey, while the loading component provides a placeholder during data fetching. The content component fetches and displays journey details, including progress and roadmap information. Additionally, update the dashboard to navigate to the jornada page and adjust layout styles for better consistency.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "fake-server": "json-server --watch src/fakeApi/db.json --port 3001 --delay 2000"
+    "fake-server": "json-server --watch src/fakeApi/db.json --port 3001 --delay 2000 --id uid"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.11",
