--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "fake-server": "json-server --watch src/fakeApi/db.json --port 3001 --delay 2000 --id uid"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slot": "^1.2.0",
@@ -18,9 +19,11 @@
     "@tanstack/query-sync-storage-persister": "^5.74.6",
     "@tanstack/react-query": "^5.74.4",
     "@tanstack/react-query-persist-client": "^5.74.6",
+    "@xyflow/react": "^12.6.4",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "firebase": "^11.6.1",
     "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
