--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
+    "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.1",
+    "react-simple-code-editor": "^0.14.1",
     "react-syntax-highlighter": "^15.6.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
@@ -40,6 +42,7 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/node": "^22.14.0",
+    "@types/prismjs": "^1.26.5",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/react-syntax-highlighter": "^15.5.13",
